fix:created new variabels in global css for light/dark mode

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -6,58 +6,64 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #1a1a1a;
-  --card: #ffffff;
-  --primary: #457b9d;
-  --primary-light: #a8dadc;
-  --primary-dark: #1d3557;
-  --border: #e0e0e0;
-  --text: #374151;
-  --radius: 0.5rem;
+  --foreground: #f7f9fb;
+  --text: #1c1c1c;
+  --muted-text: #9fa1a2;
+  --muted-foreground: #f3f3f3;
+  --border: #e8e8e8;
 
-  --muted: #e5e7eb;
-  --muted-foreground: #6b7280;
-  --primary-foreground: #ffffff;
-  --secondary: #a8dadc;
-  --secondary-foreground: #1d3557;
-  --destructive: #dc2626;
-  --destructive-foreground: #ffffff;
-  --card-foreground: #1a1a1a;
-  --ring: #457b9d;
+  --blue: #b1e3ff;
+  --blue-medium: #a8c5da;
+  --blue-light: #e3f5ff;
 
-  --sidebar-background: 0 0% 98%;
-  --sidebar-foreground: 240 5.3% 26.1%;
-  --sidebar-primary: 240 5.9% 10%;
-  --sidebar-primary-foreground: 0 0% 98%;
-  --sidebar-accent: 240 4.8% 95.9%;
-  --sidebar-accent-foreground: 240 5.9% 10%;
-  --sidebar-border: 220 13% 91%;
-  --sidebar-ring: 217.2 91.2% 59.8%;
+  --purple: #95a4fc;
+  --purple-medium: #c6c7f8;
+  --purple-light: #e5ecf6;
+  --purple-lightest: #eef3f8;
+
+  --green: #a1e3cb;
+  --green-light: #baedbd;
+
+  --yellow: #ffe999;
+  --red: #ff4747;
+
+  --dark-darkest: #1c1c1c;
+  --dark: #484849;
+  --dark-medium: #9fa1a2;
+  --dark-light: #cbcdce;
+  --dark-lighter: #e1e3e5;
+  --dark-lightest: #eceef0;
+
+  --white-whitest: #ffffff;
+  --white: #fdfefe;
+  --white-medium: #fafbfd;
+  --white-light: #f9fafc;
+  --white-lighter: #f8fafb;
+  --white-lightest: #f7f9fb;
 }
 
 .dark {
-  --background: #0e1217;
-  --foreground: #f1f5f9;
-  --text: #94a3b8;
-  --muted: #1e293b;
-  --muted-foreground: #64748b;
-  --primary: #60a5fa;
-  --secondary: #334155;
-  --secondary-foreground: #f1f5f9;
-  --border: #374151;
-  --destructive: #ef4444;
-  --card: #1c1f26;
-  --card-foreground: #010407;
-  --ring: #60a5fa;
+  --background: #1c1c1c;
+  --foreground: #282828;
+  --text: #ffffff;
+  --muted-text: #7e7e7e;
+  --muted-foreground: #323232;
+  --border: #333333;
 
-  --sidebar-background: #0e1217;
-  --sidebar-foreground: 240 4.8% 95.9%;
-  --sidebar-primary: 224.3 76.3% 48%;
-  --sidebar-primary-foreground: 0 0% 100%;
-  --sidebar-accent: 240 3.7% 15.9%;
-  --sidebar-accent-foreground: 240 4.8% 95.9%;
-  --sidebar-border: 240 3.7% 15.9%;
-  --sidebar-ring: 217.2 91.2% 59.8%;
+  --blue: #b1e3ff;
+  --blue-medium: #a8c5da;
+  --blue-light: #e3f5ff;
+
+  --purple: #95a4fc;
+  --purple-medium: #c6c7f8;
+  --purple-light: #e5ecf6;
+  --purple-lightest: #eef3f8;
+
+  --green: #a1e3cb;
+  --green-light: #baedbd;
+
+  --yellow: #ffe999;
+  --red: #ff4747;
 }
 
 html,
@@ -67,7 +73,7 @@ main {
 }
 
 body {
-  color: var(--foreground);
+  color: var(--text);
   background: var(--background);
   font-family: 'Inter';
   transition:
@@ -79,7 +85,7 @@ body {
   h1,
   h2,
   h3 {
-    color: var(--foreground);
+    color: var(--text);
   }
   h1 {
     @apply text-2xl font-bold;
@@ -95,7 +101,7 @@ body {
   h5,
   h6 {
     @apply text-base font-normal;
-    color: var(--muted-foreground);
+    color: var(--text);
   }
 
   p {
